[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/input_helper/examples/remap.gd" type="Script" id=1]
[ext_resource path="res://addons/input_helper/examples/Open_Sans/OpenSans-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Remap" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PressAKeyLabel" type="Label" parent="."]
margin_left = 862.0
margin_top = 519.0
margin_right = 1058.0
margin_bottom = 561.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Press a key..."

[node name="VBox" type="HBoxContainer" parent="."]
margin_left = 731.0
margin_top = 519.0
margin_right = 1189.0
margin_bottom = 561.0
size_flags_horizontal = 3
custom_constants/separation = 40

[node name="CurrentKeyLabel" type="Label" parent="VBox"]
margin_right = 348.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "ui_accept is currently A"

[node name="Button" type="Button" parent="VBox"]
margin_left = 388.0
margin_right = 458.0
margin_bottom = 42.0
text = "Change..."

[connection signal="pressed" from="VBox/Button" to="." method="_on_Button_pressed"]
